--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@uniswap/sdk-core",
+  "name": "@aliendex/sdk-core",
   "license": "MIT",
-  "version": "3.0.1",
-  "description": "⚒️ An SDK for building applications on top of Uniswap V3",
+  "version": "3.1.0",
+  "description": "⚒️ An SDK for building applications on top of Uniswap",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/Uniswap/uniswap-sdk-core.git",
+  "repository": "https://github.com/crystaleum/sdk-core.git",
   "keywords": [
     "uniswap",
     "ethereum"
